--- a/sdfs/Cargo.toml
+++ b/sdfs/Cargo.toml
@@ -22,6 +22,7 @@ rand = "0.8.5"
 indicatif = "0.17.7"
 dashmap = "5.5.3"
 inquire = "0.6.2"
+file-lock = "2.1.10"
 
 [build-dependencies]
 prost-build = "0.12.0"
