--- a/sdfs/Cargo.toml
+++ b/sdfs/Cargo.toml
@@ -23,6 +23,7 @@ indicatif = "0.17.7"
 dashmap = "5.5.3"
 inquire = "0.6.2"
 file-lock = "2.1.10"
+fd-lock = "4.0.0"
 
 [build-dependencies]
 prost-build = "0.12.0"
