Empty folder on shutdown

--- a/sdfs/Cargo.toml
+++ b/sdfs/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.32.0", features = ["sync", "net", "io-util", "rt-multi-thread", "macros", "signal", "time", "fs"] }
+tokio = { version = "1.32.0", features = ["sync", "net", "io-util", "rt-multi-thread", "macros", "signal", "time", "fs", "process"] }
 futures = "0.3.29"
 bytes = "1.4.0"
 tracing = "0.1"
@@ -23,6 +23,7 @@ indicatif = "0.17.7"
 dashmap = "5.5.3"
 inquire = "0.6.2"
 fd-lock = "4.0.0"
+tokio-util = "0.7.10"
 
 [build-dependencies]
 prost-build = "0.12.0"
